# geometry

./: .gitignore  Dockerfile  README.md  conda_req.txt  environment.yaml  install.txt  pip_req.txt
kaigeo/: README.md  setup.cfg
kaigeo/src/kaigeo/: __init__.py  datasets.py  detect.py  gan_models.py  kaigeo.py  nerf_models.py  pulsar_gan_models.py  pulsar_models.py
kaigeo/src/kaigeo/scripts/: detect.py
kaigeo/src/kaigeo/tests/: test_datasets.py
kube/: postprocess.yaml
notebooks/: NERF.ipynb  ObjectDetection.ipynb  basic_implicit.ipynb  fit_textured_mesh.ipynb  ganulation.ipynb  pulsar1.ipynb
