[metadata]
name = kaigeo
version = 0.0.1
description = Geometry for kaimerra
long_description = Geometry for kaimerra
license = Proprietary

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =src
scripts =
install_requires =

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
        geometry-postprocess = kaigeo.scripts.detect:run
